# Scoreboard-backend/controllers/GlobalController.ts
@@ -22,6 +22,18 @@ export class GlobalController {
         SocketServer.io.sockets.emit("tickerUpdate", { text: body.text });
     }
 
+    @Post("/featured-event")
+    public async updateFeaturedEvent(@Body() body: { eventId: string }) {
+        let config = await GlobalConfigModel.findOne();
+        if (!config) {
+            config = new GlobalConfigModel();
+        }
+        config.featuredEventId = body.eventId;
+        await config.save();
+
+        SocketServer.io.sockets.emit("featuredEventUpdate", { eventId: body.eventId });
+    }
+
     @Get("/config")
     public async getConfig() {
         let config = await GlobalConfigModel.findOne();
