# Scoreboard-backend/routes/GlobalRoutes.ts
@@ -13,6 +13,16 @@ router.post("/ticker", async (req, res) => {
     res.sendStatus(204);
 });
 
+router.post("/featured-event", async (req, res) => {
+    try {
+        await new GlobalController().updateFeaturedEvent(req.body);
+        res.sendStatus(204);
+    } catch (e: any) {
+        console.error("Featured Event Error:", e);
+        res.status(500).send(e.toString());
+    }
+});
+
 router.get("/config", async (req, res) => {
     res.json(await new GlobalController().getConfig());
 });
